--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 		<head>
 		<meta name="description" content="Dan McCarthy's home page for GitHub.">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<link rel = "stylesheet" href = "home.css">
+		<link rel = "stylesheet" href = "index.css">
 		<title>Dan McCarthy | GitHub</title>
 		</head>
 
